--- a/P010621.opf/meta.yml
+++ b/P010621.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG12545
   title: སྐྱོ་ཤས་ཀྱི་གླུ་དབྱངས་སྨོས་པ་སྣ་ཚོགས་པདྨའི་ཕྲེང་བ།
   author: ''
-  volumes: {}
+  volumes:
+    7c5dcaf03eeb499b83961201113f90a5:
+      image_group_id: I1KG12611
+      title: ''
+      volume_number: 1
+      total_pages: 106
