--- a/P010621.opf/layers/v001/Pagination.yml
+++ b/P010621.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 7878b92060de48b09074f0c18a672d91
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   709332e40e494bccb839a417ab5741c0:
